# FISH_INTERFERE

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  about_paramservice.txt  action_decomposition.txt  build_fish_image.sh  cesitli.txt  client_implementation.txt  comm_dep_models.txt  container_install.sh  design_decisions.txt  fish_auto_mission.sh  fish_events.txt  fish_manual.md  fish_orchestrator.py  fish_settings.ini  immediate_work.txt  install_all.sh  install_fish.sh  install_fish_deps.sh  jazzy_port.txt  known_bugs.txt  mapping.txt  paper_outline_en.html  presentation_stack_en.html  presentation_stack_v2_en.html  presentation_tables_en.html  pyproject.toml  rclpy_tracepoints.txt  setup_fish.sh  skeleton_index.html
.github/: DISCUSSIONS_WELCOME.md
config/: fish_events.txt
docker/: README.md  _generated_isaac_ros_centerpose.Dockerfile  _generated_isaac_ros_centerpose_setup.sh  _generated_isaac_ros_detectnet.Dockerfile  _generated_isaac_ros_detectnet_setup.sh  _generated_isaac_ros_dnn_image_encoder.Dockerfile  _generated_isaac_ros_dnn_image_encoder_setup.sh  build_fish_base.sh  build_fish_ros2_benchmark.sh  fish-base.Dockerfile  fish-r2b-base.Dockerfile  fish-r2b-stereo_image_proc-custom.Dockerfile  fish-r2b-tensorrt-base.Dockerfile  fish-ros2-benchmark.Dockerfile
docs/: MANAGER_LOG.md  SHARED_LEARNINGS.md  api.md  conf.py  dependencies.md  graph_store.md  index.md  installation.md  isaac_ros_fish_overlay_results.md  isaac_ros_overnight_summary.md  isaac_ros_performed_patches.md  isaac_ros_smoke_results.md  isaac_ros_sweep_phase1.md  isaac_ros_sweep_phase2.md  isaac_ros_sweep_phase3.md  mission.md  requirements.txt  sweep_v2_phase1.md  sweep_v2_phase2.md  sweep_v2_phase3.md  tracepoints.md  usage.md
examples/: a2_apriltag_with_gpu.jsonld  aas_single_drone.yaml  isaac_apriltag.yaml  poc_repo_graph.jsonld
fish_tracepoints/: install.sh  install_fish_tracepoints  install_rclpy.sh
missions/: aas_single_drone.yaml
notes/: EXPECTED_OBSERVED.txt  HANDOFF.md  a2_apriltag_fish_graph.json  a2_overnight_inventory.txt  action_decomposition.txt  action_probe_plan.txt  action_resolve_improved.txt  action_tracepoints.txt  apriltag_model_validation.txt  architecture.mmd  autonomous_log.txt  callback_association.txt  case_of_non_rclcpp.txt  client_implementation.txt  client_server_rclpy_vs_rclcpp.txt  client_tracepoint_status.txt  comm_dep_models.txt  component_handling.txt  cuda_api_model.txt  db_structure.txt  dedup_rclpy_exec.txt  embed_start.txt  extra_tracepoints.txt  fish_computable_properties.txt  fish_entity_model.txt  fish_manual.md  follow_up.txt  gpu_mapping_datapoints.txt  gpu_profiling_journey.txt  graph_store.txt  host_mediated_stream_sync.txt  immediate_work.txt  important_details.txt  isaac_image_patches.txt  isaac_ros_coverage.txt  known_bugs.txt  known_issues.txt  mapping.txt  modeling_memset.txt  (+37 more)
(+183 files in other folders)
